--- a/hotels.html
+++ b/hotels.html
@@ -202,8 +202,7 @@
         <a class="social-btn social-btn-youtube" href="http://www.youtube.com/">Youtube</a><!-- иконка ютуба png-->
       </section>
       <section class="link-third">
-        <p>Разработано:</p>
-        <a class="btn" href="https://htmlacademy.ru">HTML Academy</a>
+        <p class="btn"">HTML Academy</p>
       </section>
     </div>
   </footer>
