--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       </div>
       <div class="city-sedona">
         <figure class="city-view">
-          <img src="img/pic-real-city.jpg" alt="Седона"><!--поставить ссылку на картинку в блоке -->
+          <img src="img/pic-real-city-full.jpg" alt="Седона"><!--поставить ссылку на картинку в блоке -->
         </figure>
       </div>
     </section>
@@ -79,18 +79,18 @@
         <p class="properties-white-h4">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
       </div>
     </section>
-    <section class="pluses-2 pluses-attraction"><!-- блоки Площадь, Дорога, туристы -->
-      <div class="pluses-block-1 pluses-number pluses-square">
+    <section class="pluses-2 clearfix"><!-- блоки Площадь, Дорога, туристы -->
+      <div class="pluses-block-1">
         <h3 class="properties-black-h3">Небольшая площадь</h3>
         <p class="pluses-block-subtitle properties-black-h4">-№3-</p>
         <p class="pluses-block-about properties-black-h4">Все достопримечательности находятся очень близко</p>
       </div>
-      <div class="pluses-block-1 pluses-number pluses-road">
+      <div class="pluses-block-2">
         <h3 class="properties-black-h3">Красивая дорога</h3>
         <p class="pluses-block-subtitle properties-black-h4">-№4-</p>
         <p class="pluses-block-about properties-black-h4">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
       </div>
-      <div class="pluses-block-1 pluses-number pluses-tourist">
+      <div class="pluses-block-3">
         <h3 class="properties-black-h3">Мало туристов</h3>
         <p class="pluses-block-subtitle properties-black-h4">-№5-</p>
         <p class="pluses-block-about properties-black-h4">Большинство едет в Гранд Каньон и толпится там</p>
