--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
         <p class="properties-white-h4">Седона - не аттракцион для туристов, там течёт своя жизнь</p>
       </div>
       <div class="city-sedona">
-        <figure class="city-view">
-          <img src="img/pic-real-city-full.jpg" alt="Седона"><!--поставить ссылку на картинку в блоке -->
-        </figure>
+        <!-- <figure class="city-view">
+          <img src="" alt="Седона">
+        </figure> -->
       </div>
     </section>
     <section class="pluses-1 clearfix"><!-- блок с жильем, едой, сувенирами -->
