--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <section class="city clearfix"><!--блок Настоящий городок с картинкой-->
       <div class="city-description">
         <h3 class="properties-white-h3">Настоящий городок</h3>
-        <p class="properties-white-h4">-№1-</p>
+        <p class="properties-white-h4">- №1 -</p>
         <p class="properties-white-h4">Седона - не аттракцион для туристов, там течёт своя жизнь</p>
       </div>
       <div class="city-sedona">
@@ -50,17 +50,17 @@
       </div>
     </section>
     <section class="pluses-1 clearfix"><!-- блок с жильем, едой, сувенирами -->
-      <div class="pluses-block pluses-housing">
+      <div class="pluses-block-1">
         <img src="img/house.png">
         <h3 class="properties-black-h3">Жилье</h3>
         <p class="pluses-block-motel properties-black-h4">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
       </div>
-      <div class="pluses-block pluses-food">
+      <div class="pluses-block-1">
         <img src="img/hamburger.png">
         <h3 class="properties-black-h3">Еда</h3>
         <p class="pluses-block-about properties-black-h4">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
       </div>
-      <div class="pluses-block pluses-souvenirs">
+      <div class="pluses-block-1">
         <img src="img/present.png">
         <h3 class="properties-black-h3">Сувениры</h3>
         <p class="pluses-block-about properties-black-h4">Не только китайского, но и местного производства!</p>
@@ -69,30 +69,30 @@
     <!-- блок со скалами, мост дьявола -->
     <section class="roсks clearfix">
       <div class="roсks-pic">
-        <figure class="roсks-view">
+        <!-- <figure class="roсks-view">
           <img src="img/pic-devil-bridge.jpg" alt="Седона">
-        </figure>
+        </figure> -->
       </div>
       <div class="roсks-description">
         <h3 class="properties-white-h3">Там есть мост дьявола</h3>
-        <p class="properties-white-h4">-№2-</p>
+        <p class="properties-white-h4">- №2 -</p>
         <p class="properties-white-h4">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
       </div>
     </section>
     <section class="pluses-2 clearfix"><!-- блоки Площадь, Дорога, туристы -->
-      <div class="pluses-block-1">
+      <div class="pluses-block-2">
         <h3 class="properties-black-h3">Небольшая площадь</h3>
-        <p class="pluses-block-subtitle properties-black-h4">-№3-</p>
+        <p class="pluses-block-subtitle properties-black-h4">- №3 -</p>
         <p class="pluses-block-about properties-black-h4">Все достопримечательности находятся очень близко</p>
       </div>
       <div class="pluses-block-2">
         <h3 class="properties-black-h3">Красивая дорога</h3>
-        <p class="pluses-block-subtitle properties-black-h4">-№4-</p>
+        <p class="pluses-block-subtitle properties-black-h4">- №4 -</p>
         <p class="pluses-block-about properties-black-h4">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
       </div>
-      <div class="pluses-block-3">
+      <div class="pluses-block-2">
         <h3 class="properties-black-h3">Мало туристов</h3>
-        <p class="pluses-block-subtitle properties-black-h4">-№5-</p>
+        <p class="pluses-block-subtitle properties-black-h4">- №5 -</p>
         <p class="pluses-block-about properties-black-h4">Большинство едет в Гранд Каньон и толпится там</p>
       </div>
     </section>
@@ -103,14 +103,12 @@
         <h2 class="booking-title">Заинтересовались?</h2>
         <p class="booking-info properties-black-h4">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне</p>
       </div>
+    </section>
+
+    <section class="search-form-book">
       <div class="search-form-link">
         <a class="search-btn" href="#">Поиск гостиницы в седоне</a>
       </div>
-    </section>
-    <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52385.180521662296!2d-111.83024383534357!3d34.85437335639766!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNg!5e0!3m2!1sru!2s!4v1493279104759" allowfullscreen>
-    </iframe> -->
-
-      <section class="search-form-book">
       <form method="post" action="/search">
         <label class="booking-arrive" for="booking-arrive-date">Дата заезда:
           <a class="arrive-cal" href="#"><span class="icon-calendar"></span></a>
@@ -133,18 +131,20 @@
         </div>
         <button class="booking-form-btn" type="submit">Найти</button>
       </form>
-      </section>
-
+    </section>
+    <section class="map">
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52385.180521662296!2d-111.83024383534357!3d34.85437335639766!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNg!5e0!3m2!1sru!2s!4v1493279104759" allowfullscreen>
+     </iframe>
+    </section>
 
 
     <!-- КОНЕЦ БЛОКА С ФОРМОЙ БРОНИ -->
-
 
   </main>
   <footer>
     <div class="container clearfix">
       <section class="link-first">
-        <a class="hashtag properties-black-h3">#visitsedona</p>
+        <a class="hashtag properties-black-h3" href="">#visitsedona</p>
       </section>
       <section class="link-second">
         <a class="social-btn social-btn-twitter" href="https://twitter.com/">Twitter</a><!-- иконка твиттера png-->
