--- a/hotels.html
+++ b/hotels.html
@@ -26,23 +26,25 @@
       <div class="background-filter">
         <section class="filter container clearfix">
           <form method="post" action="/">
-          <div class="filter-infrastructure">
-            <h3 class="filter-infrastructure-title">Инфраструктура</h3>
-            <input type="checkbox" name="filter-pool">
-            <label class="filter-select" for="filter-pool">Бассейн</label>
-            <input type="checkbox" name="filter-parking">
-            <label class="filter-select" for="filter-parking">Парковка</label>
-            <input type="checkbox" name="filter-wifi">
-            <label class="filter-select" for="filter-wifi">Парковка</label>
-          </div>
-          <div class="filter-houses">
-            <h3 class="filter-houses-title">Тип жилья</h3>
-            <input type="checkbox" name="filter-hotel">
-            <label class="filter-select" for="filter-hotel">Гостиница</label>
-            <input type="checkbox" name="filter-motel">
-            <label class="filter-select" for="filter-motel">Мотель</label>
-            <input type="checkbox" name="filter-apartament">
-            <label class="filter-select" for="filter-apartament">Апартаменты</label>
+          <div class="filter-inf-house">
+            <div class="filter-infrastructure">
+              <h3 class="filter-infrastructure-title">Инфраструктура</h3>
+              <input type="checkbox" name="filter-pool">
+              <label class="filter-select" for="filter-pool">Бассейн</label>
+              <input type="checkbox" name="filter-parking">
+              <label class="filter-select" for="filter-parking">Парковка</label>
+              <input type="checkbox" name="filter-wifi">
+              <label class="filter-select" for="filter-wifi">Парковка</label>
+            </div>
+            <div class="filter-houses">
+              <h3 class="filter-houses-title">Тип жилья</h3>
+              <input type="checkbox" name="filter-hotel">
+              <label class="filter-select" for="filter-hotel">Гостиница</label>
+              <input type="checkbox" name="filter-motel">
+              <label class="filter-select" for="filter-motel">Мотель</label>
+              <input type="checkbox" name="filter-apartament">
+              <label class="filter-select" for="filter-apartament">Апартаменты</label>
+            </div>
           </div>
           <div class="filter-price">
             <p class="filter-price-title">Стоимость в сутки (Р):</p>
