--- a/hotels.html
+++ b/hotels.html
@@ -79,7 +79,7 @@
   <div class="found clearfix"> <!--общий для всех блоков-->
     <div class="found-houses clearfix"><!--общий для блока с рисунком и отелем-->
       <div class="found-houses-img"><!--блок с рисунком-->
-        <img src="img/amara-resort.jpg" alt="Amara resort & spa">
+        <img class="houses-img" src="img/amara-resort.jpg" alt="Amara resort & spa">
       </div><!--блок с рисунком-->
       <div class="found-houses-all clearfix"><!--общий для отеля, гостиницей. ценой-->
         <div class="found-houses-info"><!--(блок с названием отеля)-->
@@ -97,7 +97,7 @@
             <div class="found-button-type-1"><!--(блок с кнопками подробнее)-->
               <a class="found-button-more" href="#">Подробнее</a>
             </div><!--(блок с кнопками подробнее)-->
-            <div class="found-button-type2"><!--(блок с кнопками забронировать)-->
+            <div class="found-button-type-2"><!--(блок с кнопками забронировать)-->
               <a class="found-button-book" href="#">Забронировать</a>
             </div><!--(блок с кнопками забронировать)-->
           </div><!--(блок с кнопками подробнее и забронировать)-->
@@ -118,7 +118,7 @@
 <div class="found clearfix"> <!--общий для всех блоков-->
     <div class="found-houses clearfix"><!--общий для блока с рисунком и отелем-->
       <div class="found-houses-img"><!--блок с рисунком-->
-        <img src="img/desert-quail.jpg" alt="Desert Qual Inn">
+        <img class="houses-img" src="img/desert-quail.jpg" alt="Desert Qual Inn">
       </div><!--блок с рисунком-->
       <div class="found-houses-all clearfix"><!--общий для отеля, гостиницей. ценой-->
         <div class="found-houses-info"><!--(блок с названием отеля)-->
@@ -136,7 +136,7 @@
             <div class="found-button-type-1"><!--(блок с кнопками подробнее)-->
               <a class="found-button-more" href="#">Подробнее</a>
             </div><!--(блок с кнопками подробнее)-->
-            <div class=" found-button-type2"><!--(блок с кнопками забронировать)-->
+            <div class="found-button-type-2"><!--(блок с кнопками забронировать)-->
               <a class="found-button-book" href="#">Забронировать</a>
             </div><!--(блок с кнопками забронировать)-->
           </div><!--(блок с кнопками подробнее и забронировать)-->
@@ -157,7 +157,7 @@
 <div class="found clearfix"> <!--общий для всех блоков-->
     <div class="found-houses clearfix"><!--общий для блока с рисунком и отелем-->
       <div class="found-houses-img"><!--блок с рисунком-->
-        <img src="img/villas-poco.jpg" alt="Villas at Poco Diablo">
+        <img class="houses-img" src="img/villas-poco.jpg" alt="Villas at Poco Diablo">
       </div><!--блок с рисунком-->
       <div class="found-houses-all clearfix"><!--общий для отеля, гостиницей. ценой-->
         <div class="found-houses-info"><!--(блок с названием отеля)-->
@@ -175,7 +175,7 @@
             <div class="found-button-type-1"><!--(блок с кнопками подробнее)-->
               <a class="found-button-more" href="#">Подробнее</a>
             </div><!--(блок с кнопками подробнее)-->
-            <div class=" found-button-type2"><!--(блок с кнопками забронировать)-->
+            <div class=" found-button-type-2"><!--(блок с кнопками забронировать)-->
               <a class="found-button-book" href="#">Забронировать</a>
             </div><!--(блок с кнопками забронировать)-->
           </div><!--(блок с кнопками подробнее и забронировать)-->
