--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
   <title>Главная страница - Седона</title>
   <meta name="description" content="Отдых в Седоне. Спокойный отдых вдали от суеты, без скопления туристов. Тихие мотели, вскусная еда и сувениры">
   <meta name="keywords" content="отдых в Аризоне, Аризона, Седона, мотель, отель, гостиница, апартаменты, вилла, бассейн, спа, мост дьявола, туризм, отдых"> <!--добавить контент на английском-->
-
+  <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
   <!--добавить ссылку на Стили-->
   <link rel="icon" href="#" type="image/x-icon">
   <!--добавить Фавикон-->
 </head>
 <body>
-  <header>
-    <nav class="menu-navigator clearfix">
+  <header class="container">
+    <nav class="menu-navigator container clearfix">
       <ul>
         <li><a href="#">Информация</a></li>
         <li><a href="#">Фото и видео</a></li>
@@ -23,7 +23,7 @@
       </ul>
     </nav>
   </header>
-  <main>
+  <main class="container">
     <div class="card"><!--блок с картинкой Welcome-->
       <figure class="card-welcome-sedona">
         <img class="card-welcome" src="img/welcome-text.png" alt="Welcome">
@@ -31,13 +31,13 @@
       </figure>
     </div>
     <!-- /*ВСТАВИТЬ ГЕОМ ФИГУРУ НАД СЕКЦИЕЙ!!!-->
-    <section class="about"><!--блок с описанием седоны-->
+    <section class="about container"><!--блок с описанием седоны-->
       <div class="align">
         <h3 class="about-1 properties-black-h3">Cедона — небольшой городок в аризоне, заслуживающий большего!</h3>
         <h4 class="about-2 properties-black-h4">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</h4>
       </div>
     </section>
-    <section class="city clearfix"><!--блок Настоящий городок с картинкой-->
+    <section class="city container clearfix"><!--блок Настоящий городок с картинкой-->
       <div class="city-description">
         <h3 class="properties-white-h3">Настоящий городок</h3>
         <p class="properties-white-h4">- №1 -</p>
@@ -49,7 +49,7 @@
         </figure> -->
       </div>
     </section>
-    <section class="pluses-1 clearfix"><!-- блок с жильем, едой, сувенирами -->
+    <section class="pluses-1 container clearfix"><!-- блок с жильем, едой, сувенирами -->
       <div class="pluses-block-1">
         <img src="img/house.png">
         <h3 class="properties-black-h3">Жилье</h3>
@@ -67,7 +67,7 @@
       </div>
     </section>
     <!-- блок со скалами, мост дьявола -->
-    <section class="roсks clearfix">
+    <section class="roсks container clearfix">
       <div class="roсks-pic">
         <!-- <figure class="roсks-view">
           <img src="img/pic-devil-bridge.jpg" alt="Седона">
@@ -79,7 +79,7 @@
         <p class="properties-white-h4">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
       </div>
     </section>
-    <section class="pluses-2 clearfix"><!-- блоки Площадь, Дорога, туристы -->
+    <section class="pluses-2 container clearfix"><!-- блоки Площадь, Дорога, туристы -->
       <div class="pluses-block-2">
         <h3 class="properties-black-h3">Небольшая площадь</h3>
         <p class="pluses-block-subtitle properties-black-h4">- №3 -</p>
@@ -98,10 +98,11 @@
     </section>
 
     <!-- НАЧАЛО БЛОКА С ФОРМОЙ ПОИСКА И БРОНИ-->
-    <section class="interest-blok clearfix">
+    <section class="interest-blok container clearfix">
       <div class="align-1">
         <h2 class="booking-title">Заинтересовались?</h2>
-        <p class="booking-info properties-black-h4">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне</p>
+        <p class="booking-info properties-black-h4">Укажите предполагаемые даты поездки,
+        <br> и мы покажем вам лучшие предложения гостиниц в седоне</p>
       </div>
     </section>
 
@@ -110,7 +111,7 @@
         <div class="search-link-block">
           <a class="search-link" href="#">Поиск гостиницы в седоне</a>
         </div>
-        <form method="post" action="/search">
+        <form class="form-index" method="post" action="/search">
           <label class="booking-arrive" for="booking-arrive-date">Дата заезда:
             <a class="arrive-cal" href="#">
               <span class="icon-calendar"></span>
@@ -147,7 +148,7 @@
       </div>
     </section>
     <section class="map">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52385.180521662296!2d-111.83024383534357!3d34.85437335639766!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNg!5e0!3m2!1sru!2s!4v1493279104759" allowfullscreen>
+      <iframe class="container" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52385.180521662296!2d-111.83024383534357!3d34.85437335639766!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNg!5e0!3m2!1sru!2s!4v1493279104759" allowfullscreen>
      </iframe>
     </section>
 
@@ -155,7 +156,7 @@
     <!-- КОНЕЦ БЛОКА С ФОРМОЙ БРОНИ -->
 
   </main>
-  <footer>
+  <footer class="container">
     <div class="container clearfix">
       <section class="link-first">
         <a class="hashtag properties-black-h3" href="#">#visitsedona</p>
