--- a/hotels.html
+++ b/hotels.html
@@ -30,17 +30,17 @@
             <div class="filter-infrastructure">
               <h3 class="filter-infrastructure-title">Инфраструктура:</h3>
               <label class="filter-select" for="filter-pool">
-                <input type="checkbox" name="filter-pool">
+                <input class="checkbox" type="checkbox" name="filter-pool">
                 <span class="checkbox-custom"></span>
                 <span class="label">Бассейн</span>
               </label>
               <label class="filter-select" for="filter-parking">
-                <input type="checkbox" name="filter-parking">
+                <input class="checkbox" type="checkbox" name="filter-parking">
                 <span class="checkbox-custom"></span>
                 <span class="label">Парковка</span>
               </label>
               <label class="filter-select" for="filter-wifi">
-                <input type="checkbox" name="filter-wifi">
+                <input class="checkbox" type="checkbox" name="filter-wifi">
                 <span class="checkbox-custom"></span>
                 <span class="label">Wi-fi</span>
               </label>
@@ -48,17 +48,17 @@
             <div class="filter-houses">
               <h3 class="filter-houses-title">Тип жилья:</h3>
               <label class="filter-select" for="filter-hotel">
-                <input type="checkbox" name="filter-hotel">
+                <input class="checkbox" type="checkbox" name="filter-hotel">
                 <span class="checkbox-custom"></span>
                 <span class="label">Гостиница</span>
               </label>
               <label class="filter-select" for="filter-motel">
-                <input type="checkbox" name="filter-motel">
+                <input class="checkbox" type="checkbox" name="filter-motel">
                 <span class="checkbox-custom"></span>
                 <span class="label">Мотель</span>
               </label>
               <label class="filter-select" for="filter-apartament">
-                <input type="checkbox" name="filter-apartament">
+                <input class="checkbox" type="checkbox" name="filter-apartament">
                 <span class="checkbox-custom"></span>
                 <span class="label">Апартаменты</span>
               </label>
